# cashu-lnurl

./: .gitignore  Cargo.toml  README.md  example.config.toml  flake.nix  justfile
.github/workflows/: lint.yml
LICENSES/: clnurl-MIT
src/: cashu.rs  cli.rs  config.rs  database.rs  error.rs  main.rs  nostr.rs  routes.rs  types.rs  utils.rs
