[package]
name = "cashu-lnurl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
axum = "0.6.18"
cashu-crab = { git = "https://github.com/thesimplekid/cashu-crab", rev = "04fe004a4b7f94af1c5c0453d8dad845a1ddb27a" }
# cln-rpc = { git = "https://github.com/ElementsProject/lightning" }
cln-rpc = "0.1.3"
# cashu-crab = { path = "../cashu-crab" }
config = { version = "0.13", features = ["toml"] }
dirs = "5.0.1"
futures = "0.3.28"
lazy_static = "1.4.0"
nostr-sdk = { version = "0.23.0", default-features = false, features=["nip04", "nip19"]}
redb = "1.0.0"
serde = "1.0.163"
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = "1.28.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tungstenite = { version = "0.20.0", features = ["rustls-tls-webpki-roots"]}
url = "2.4.0"
uuid = { version = "1.4.1", features = ["v4"] }
